[package]
name = "task_scope"
version = "0.1.1"
authors = ["pandaman64 <kointosudesuyo@infoseek.jp>"]
edition = "2018"

description = "asynchronous runtime extension for supporting Structured Concurrency with task spawning"
repository = "https://github.com/pandaman64/task_scope"
categories = ["asynchronous", "concurrency"]

license = "MIT OR Apache-2.0"

[features]
default = ["tokio"]

[dependencies]
futures = "0.3"
futures-intrusive = "0.4"
pin-project = "1.0"
parking_lot = "0.11"
bytes = "1.0"

# supported runtimes
[dependencies.async-std]
version = "1.4.0"
optional = true

[dependencies.tokio]
version = "1.8"
optional = true
features = ["rt", "rt-multi-thread", "net", "time", "macros", "io-util"]

[dev-dependencies]
tokio = { version = "1.8", features = ["signal"] }